--- a/katabatic/katabatic.html
+++ b/katabatic/katabatic.html
@@ -188,7 +188,7 @@
             </div>
         </div>
         <div class="image" id="image8">
-          <img src="wildlife and safaris.jpg" alt="king">
+          <img src="wildlife and safaris.jpg" alt="">
           <div class="content content4">
               <!-- Content for image 8 -->
               <h2>King</h2>
