--- a/katabatic/katabatic.html
+++ b/katabatic/katabatic.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About Us - Wild Heart Uganda Safaris</title>
+  <link rel="stylesheet" href="">
   <link rel="stylesheet" href="styles.css">
   <style>
     /* Add your custom CSS here */
@@ -404,6 +405,39 @@
             </div>
           </div>
         </section>
+
+
+        <div class="end-section">
+          <div class="company-info">
+            <img src="company-logo.png" alt="Company Logo">
+            <p>Description of the company</p>
+          </div>
+          <div class="quick-links">
+            <h3>Quick Links</h3>
+            <ul>
+              <li><a href="#">Home</a></li>
+              <li><a href="#">About Us</a></li>
+              <li><a href="#">Contact</a></li>
+            </ul>
+          </div>
+          <div class="legal-info">
+            <h3>Legal Information</h3>
+            <ul>
+              <li><a href="#">Terms & Conditions</a></li>
+              <li><a href="#">Cancellation Policy</a></li>
+            </ul>
+          </div>
+          <div class="contacts">
+            <h3>Contacts</h3>
+            <ul>
+              <li>+256 709 185 707</li>
+              <li>+256 393 206 348</li>
+            </ul>
+            <p>info@whusworldtravel.com</p>
+            <p>86a Bukasa Rd, lower Muyenga, P.O.Box 70322 Clock Tower.</p>
+          </div>
+        </div>
+        
   
   
       
