--- a/home.html
+++ b/home.html
@@ -42,7 +42,7 @@
           <div class="swiper-slide box">
             
             <div class="content">
-              <img class="image" src="./images/3.jpg" alt="image1">
+              <img class="image" src="./images/on tree.jpg" alt="image1">
                 <div class="text"><h3>Discover the HaertBeat of Africa with us.</h3>
                   <h1>Welcome To Wild heart Safaris</h1>
                   <h5>"At Wild Heart Uganda Safaris, we're passionate about the transformative power of travel. <br> 
