--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
     <script src="https://kit.fontawesome.com/3477ae541c.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css"/>
     <title> Wild Heart Uganda Safaris</title>
-    <link rel="stylesheet" href="./styll.css">
+    <link rel="stylesheet" href="./home.css">
 </head>
 <body>
     <header class="header">
@@ -78,12 +78,8 @@
             <div class="text-overlay1">KIDEPO VALLEY NATIONAL PARK</div>
         </div>
         <div class="slid-faded">
-            <img src="./images/marc.jpg" alt="uganda torism 3">
+            <img src="./images/murchision.jpg" alt="uganda torism 3">
             <div class="text-overlay2">MURCHITION FALLS</div>
-        </div>
-        <div class="slid-fades">
-            <img src="./images/karamo.jpg" alt="uganda torism 4">
-            <div class="text-overlay3">KARAMOJONG SETTLEMENTS </div>
         </div>
 
          
