--- a/home.html
+++ b/home.html
@@ -7,18 +7,44 @@
     <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css"/>
     <title> Wild Heart Uganda Safaris</title>
     <link rel="stylesheet" href="./styll.css">
+    <style>
+      .navbar {
+    display: flex;
+    justify-content: flex-end; /* Align links to the right */
+    background-color: #f8f9fa; /* Background color */
+    padding: 10px 20px; /* Adjust padding for spacing */
+}
+
+.navbar a {
+    color: #333; /* Link text color */
+    text-decoration: none; /* Remove underline */
+    padding: 10px 15px; /* Adjust padding for spacing */
+    margin-left: 10px; /* Add space between links */
+    transition: color 0.3s ease; /* Smooth transition for color change */
+}
+
+.navbar a:hover {
+    color: #007bff; /* Change text color on hover */
+}
+
+.navbar a.active {
+    font-weight: bold; /* Highlight active link */
+    color: #28a745; /* Change text color for active link */
+}
+    </style>
 </head>
 <body>
     <header class="header">
       <a href="#home" class="logo"> <img src="./images/LOGO.png" alt=""></a>
    
       <nav class="navbar">
-        <a href="#home">HOME</a>
-        <a href="#about">ABOUT</a>
+        <a href="home.html">HOME</a>
+        <a href="/katabatic/katabatic.html">ABOUT</a>
         <a href="#services">SERVICES</a>
-        <a href="#tour">TOUR PACKAGES</a>
-        <a href="#contact">CONTACT</a>
+        <a href="index.html">TOUR PACKAGES</a>
+        <a href="/katabatic/noel/noel.html">CONTACT</a>
      </nav>
+
      <i class="fa-solid fa-bars"></i>
     </header>
 
