--- a/katabatic/noel/noel.html
+++ b/katabatic/noel/noel.html
@@ -6,7 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="/katabatic/noel.css">
+    <script>
+     
+    </script>
 </head>
+<header>
+    <nav class="navbar">
+        <a href="/home.html">HOME</a>
+        <a href="/katabatic/katabatic.html">ABOUT</a>
+        <a href="#services">SERVICES</a>
+        <a href="/index.html">TOUR PACKAGES</a>
+        <a href="noel.html">CONTACT</a>
+     </nav>
+</header>
 
 <body>
     <section class="contact">
