--- a/index.html
+++ b/index.html
@@ -103,10 +103,40 @@
         color: red;
     }
     
+    .navbar {
+    display: flex;
+    justify-content: flex-end; /* Align links to the right */
+    background-color: green; /* Background color */
+    padding: 10px 20px; /* Adjust padding for spacing */
+}
+
+.navbar a {
+    color: #333; /* Link text color */
+    text-decoration: none; /* Remove underline */
+    padding: 10px 15px; /* Adjust padding for spacing */
+    margin-left: 10px; /* Add space between links */
+    transition: color 0.3s ease; /* Smooth transition for color change */
+}
+
+.navbar a:hover {
+    color: #007bff; /* Change text color on hover */
+}
+
+.navbar a.active {
+    font-weight: bold; /* Highlight active link */
+    color: #28a745; /* Change text color for active link */
+}
     </Style>
 </head>
 <body>
     <header>
+      <nav class="navbar">
+        <a href="home.html">HOME</a>
+        <a href="/katabatic/katabatic.html">ABOUT</a>
+        <a href="#services">SERVICES</a>
+        <a href="index.html">TOUR PACKAGES</a>
+        <a href="/katabatic/noel/noel.html">CONTACT</a>
+     </nav>
         <h1 class="head">TOUR PACKAGES</h1>
       </header>
       
