--- a/home.html
+++ b/home.html
@@ -75,7 +75,7 @@
         </div>
         <div class="slid-fade2">
             <img src="./images/4.jpg" alt="uganda torism 2">
-            <div class="text-overlay1">KIDEPO VALLEY NATIONAL PARK</div>
+            <div class="text-overlay1">sipi</div>
         </div>
         <div class="slid-faded">
             <img src="./images/murchision.jpg" alt="uganda torism 3">
