--- a/home.html
+++ b/home.html
@@ -29,7 +29,7 @@
           <div class="swiper-slide box">
             
             <div class="content">
-              <img class="image" src="./images/f2.jpg" alt="image1">
+                <img src="./images/f2.jpg" alt="">
                 <div class="text"><h3>Discover the HaertBeat of Africa with us.</h3>
                   <h1>Welcome To Wild heart Safaris</h1>
                   <h5>"At Wild Heart Uganda Safaris, we're passionate about the transformative power of travel. <br> 
@@ -40,17 +40,6 @@
             </div>
           </div>
           <div class="swiper-slide box">
-            
-            <div class="content">
-              <img class="image" src="./images/on tree.jpg" alt="image1">
-                <div class="text"><h3>Discover the HaertBeat of Africa with us.</h3>
-                  <h1>Welcome To Wild heart Safaris</h1>
-                  <h5>"At Wild Heart Uganda Safaris, we're passionate about the transformative power of travel. <br> 
-                    Travel with us and make a positive impact on local communities and environments, ensuring a meaningful journey for generations to come."
-                  </h5>
-                  <a href="#" class="btn">Explore More</a>
-                </div>
-            </div>
           </div>
           <div class="swiper-button-next"></div>
           <div class="swiper-button-prev"></div>
