--- a/home.html
+++ b/home.html
@@ -29,7 +29,7 @@
           <div class="swiper-slide box">
             
             <div class="content">
-                <img src="./images/f2.jpg" alt="">
+                <img src="./images/f2.jpg" alt="" style="width: 100%;">
                 <div class="text"><h3>Discover the HaertBeat of Africa with us.</h3>
                   <h1>Welcome To Wild heart Safaris</h1>
                   <h5>"At Wild Heart Uganda Safaris, we're passionate about the transformative power of travel. <br> 
