--- a/katabatic/katabatic.html
+++ b/katabatic/katabatic.html
@@ -446,9 +446,9 @@
           <div class="quick-links">
             <h3>Quick Links</h3>
             <ul>
-              <li><a href="#">Home</a></li>
-              <li><a href="#">About Us</a></li>
-              <li><a href="#">Contact</a></li>
+              <li><a href="/home.html">Home</a></li>
+              <li><a href="/katabatic/katabatic.html">About Us</a></li>
+              <li><a href="noel/noel.html">Contact</a></li>
             </ul>
           </div>
           <div class="legal-info">
