--- a/katabatic/noel/noel.html
+++ b/katabatic/noel/noel.html
@@ -85,6 +85,38 @@
             </div>
         </div>
     </section>
+
+
+    <div class="end-section">
+        <div class="company-info">
+          <img src="company-logo.png" alt="Company Logo">
+          <p>Description of the company</p>
+        </div>
+        <div class="quick-links">
+          <h3>Quick Links</h3>
+          <ul>
+            <li><a href="/home.html">Home</a></li>
+            <li><a href="/katabatic/katabatic.html">About Us</a></li>
+            <li><a href="noel/noel.html">Contact</a></li>
+          </ul>
+        </div>
+        <div class="legal-info">
+          <h3>Legal Information</h3>
+          <ul>
+            <li><a href="#">Terms & Conditions</a></li>
+            <li><a href="#">Cancellation Policy</a></li>
+          </ul>
+        </div>
+        <div class="contacts">
+          <h3>Contacts</h3>
+          <ul>
+            <li>+256 709 185 707</li>
+            <li>+256 393 206 348</li>
+          </ul>
+          <p>info@whusworldtravel.com</p>
+          <p>86a Bukasa Rd, lower Muyenga, P.O.Box 70322 Clock Tower.</p>
+        </div>
+      </div>
 </body>
 
 </html>
